--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,32 +23,34 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-
+    <!--web容器启动和关闭的监听器-->
     <listener>
         <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
     </listener>
-
+    <!--将web容器和spring容器整合的需要启动的监听器-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-    <context-param>
+    <context-param> <!--ContextLoaderListener通过下面的配置文件将web容器和spring容器进行整合-->
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath:applicationContext.xml
+            classpath:applicationContext.xml   <!--spring配置文件-->
         </param-value>
     </context-param>
 
+
+    <!--springmvc的配置文件-->
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
+        <load-on-startup>1</load-on-startup>   <!--为0或者大于0的时候容器在启动的时候会启动这个servlet-->
     </servlet>
 
 
 
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
-        <url-pattern>*.do</url-pattern>
+        <url-pattern>/</url-pattern>
     </servlet-mapping>
 
 </web-app>
